NetBSD Problem Report #45894

From darrenr@NetBSD.org  Tue Jan 31 09:25:10 2012
Return-Path: <darrenr@NetBSD.org>
Received: by www.NetBSD.org (Postfix, from userid 1110)
	id 4804263B8C5; Tue, 31 Jan 2012 09:25:10 +0000 (UTC)
Message-Id: <20120131092510.4804263B8C5@www.NetBSD.org>
Date: Tue, 31 Jan 2012 09:25:10 +0000 (UTC)
From: darrenr@NetBSD.org
Reply-To: darrenr@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: ipftest core dumps when running tests
X-Send-Pr-Version: 3.95

>Number:         45894
>Category:       bin
>Synopsis:       ipftest core dumps when running tests
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    bin-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Tue Jan 31 09:30:00 +0000 2012
>Closed-Date:    Tue Jan 31 09:44:59 +0000 2012
>Last-Modified:  Tue Jan 31 09:45:03 +0000 2012
>Originator:     Darren Reed
>Release:        NetBSD 5.99.63
>Organization:

>Environment:

>Description:
For example, from NetBSD's ATF:

Fail: incorrect exit status: 139, expected: 0
stdout:

stderr:
[1]   Done                    echo "block in all" |
      Segmentation fault (core dumped) ipftest -F text ...

>How-To-Repeat:
Run any of the ipfilter tests that blocks a packet.
>Fix:
	Index: fil.c
===================================================================
RCS file: /devel/CVS/IP-Filter/fil.c,v
retrieving revision 2.443.2.36
diff -c -r2.443.2.36 fil.c
*** fil.c       29 Jan 2012 05:30:35 -0000      2.443.2.36
--- fil.c       31 Jan 2012 09:21:48 -0000
***************
*** 3197,3203 ****
--- 3197,3205 ----
        if (!FR_ISPASS(pass)) {
                LBUMP(ipf_stats[out].fr_block);
                if (*mp != NULL) {
+ #ifdef _KERNEL
                        FREE_MB_T(*mp);
+ #endif
                        m = *mp = NULL;

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: darrenr@NetBSD.org
State-Changed-When: Tue, 31 Jan 2012 09:44:59 +0000
State-Changed-Why:
problem fixed


From: "Darren Reed" <darrenr@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/45894 CVS commit: src/sys/dist/ipf/netinet
Date: Tue, 31 Jan 2012 09:41:38 +0000

 Module Name:	src
 Committed By:	darrenr
 Date:		Tue Jan 31 09:41:37 UTC 2012

 Modified Files:
 	src/sys/dist/ipf/netinet: fil.c

 Log Message:
 PR bin/45894
 ipftest core dumps when running tests


 To generate a diff of this commit:
 cvs rdiff -u -r1.47 -r1.48 src/sys/dist/ipf/netinet/fil.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:
 Architecture: i386
 Machine: i386

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.