PR bin/45894 ipftest core dumps when running tests